--- a/startpage/index.html
+++ b/startpage/index.html
@@ -48,6 +48,14 @@
                     <li><a href='https://reddit.com/r/programming/' target='_blank' rel='noopener noreferrer'>r/programming</a></li>
                     <li><a href='https://reddit.com/r/unixporn/' target='_blank' rel='noopener noreferrer'>r/unixporn</a></li>
                     <li><a href='https://reddit.com/r/archlinux/' target='_blank' rel='noopener noreferrer'>r/archlinux</a></li>
+                    <li><a href='https://reddit.com/r/chess/' target='_blank' rel='noopener noreferrer'>r/chess</a></li>
+                </div>
+            </div>
+
+            <div class='category'>
+                <div class='links'>
+                    <li class='title'>misc</li>
+                    <li><a href='http://pi.hole' target='_blank' rel='noopener noreferrer'>pihole</a></li>
                 </div>
             </div>
         </div>
