Add protonmail to startpage.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -18,6 +18,7 @@
                 <div class='links'>
                     <li class='title'>daily</li>
                     <li><a href='https://gmail.com' target='_blank' rel='noopener noreferrer'>gmail</a></li>
+                    <li><a href='https://proton.me' target='_blank' rel='noopener noreferrer'>protonmail</a></li>
                     <li><a href='https://news.ycombinator.com/' target='_blank' rel='noopener noreferrer'>hackernews</a></li>
                     <li><a href='https://youtube.com' target='_blank' rel='noopener noreferrer'>youtube</a></li>
                     <li><a href='https://reddit.com/' target='_blank' rel='noopener noreferrer'>reddit</a></li>
