--- a/startpage/index.html
+++ b/startpage/index.html
@@ -58,6 +58,7 @@
                 <div class='links'>
                     <li class='title'>misc</li>
                     <li><a href='http://pi.hole' target='_blank' rel='noopener noreferrer'>pihole</a></li>
+                    <li><a href='http://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
                 </div>
             </div>
         </div>
