--- a/startpage/index.html
+++ b/startpage/index.html
@@ -21,7 +21,7 @@
                     <li><a href='https://proton.me' target='_blank' rel='noopener noreferrer'>protonmail</a></li>
                     <li><a href='https://news.ycombinator.com/' target='_blank' rel='noopener noreferrer'>hackernews</a></li>
                     <li><a href='https://youtube.com' target='_blank' rel='noopener noreferrer'>youtube</a></li>
-                    <li><a href='https://reddit.com/' target='_blank' rel='noopener noreferrer'>reddit</a></li>
+                    <li><a href='https://old.reddit.com/' target='_blank' rel='noopener noreferrer'>reddit</a></li>
                     <li><a href='https://lichess.org/' target='_blank' rel='noopener noreferrer'>lichess</a></li>
                 </div>
             </div>
