--- a/startpage/index.html
+++ b/startpage/index.html
@@ -46,11 +46,11 @@
 
             <div class='category'>
                 <div class='links'>
-                    <li class='title'><a style='color: #d8dee9' href='https://reddit.com' target='_blank' rel='noopener noreferrer'>reddit</a></li>
-                    <li><a href='https://reddit.com/r/programming/' target='_blank' rel='noopener noreferrer'>r/programming</a></li>
-                    <li><a href='https://reddit.com/r/unixporn/' target='_blank' rel='noopener noreferrer'>r/unixporn</a></li>
-                    <li><a href='https://reddit.com/r/archlinux/' target='_blank' rel='noopener noreferrer'>r/archlinux</a></li>
-                    <li><a href='https://reddit.com/r/chess/' target='_blank' rel='noopener noreferrer'>r/chess</a></li>
+                    <li class='title'><a style='color: #d8dee9' href='https://old.reddit.com' target='_blank' rel='noopener noreferrer'>reddit</a></li>
+                    <li><a href='https://old.reddit.com/r/programming/' target='_blank' rel='noopener noreferrer'>r/programming</a></li>
+                    <li><a href='https://old.reddit.com/r/unixporn/' target='_blank' rel='noopener noreferrer'>r/unixporn</a></li>
+                    <li><a href='https://old.reddit.com/r/archlinux/' target='_blank' rel='noopener noreferrer'>r/archlinux</a></li>
+                    <li><a href='https://old.reddit.com/r/chess/' target='_blank' rel='noopener noreferrer'>r/chess</a></li>
                 </div>
             </div>
 
