--- a/startpage/index.html
+++ b/startpage/index.html
@@ -59,6 +59,7 @@
                     <li class='title'>misc</li>
                     <li><a href='http://pi.hole' target='_blank' rel='noopener noreferrer'>pihole</a></li>
                     <li><a href='http://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
+                    <li><a href='https://itch.io' target='_blank' rel='noopener noreferrer'>itch.io</a></li>
                 </div>
             </div>
         </div>
