Use HTTPS for protondb startpage entry.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -58,7 +58,7 @@
                 <div class='links'>
                     <li class='title'>misc</li>
                     <li><a href='http://pi.hole' target='_blank' rel='noopener noreferrer'>pihole</a></li>
-                    <li><a href='http://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
+                    <li><a href='https://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
                     <li><a href='https://itch.io' target='_blank' rel='noopener noreferrer'>itch.io</a></li>
                 </div>
             </div>
