Add wikipedia to startpage.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -60,6 +60,7 @@
                     <li><a href='http://pi.hole' target='_blank' rel='noopener noreferrer'>pihole</a></li>
                     <li><a href='https://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
                     <li><a href='https://itch.io' target='_blank' rel='noopener noreferrer'>itch.io</a></li>
+                    <li><a href='https://wikipedia.org' target='_blank' rel='noopener noreferrer'>wikipedia</a></li>
                 </div>
             </div>
         </div>
