--- a/startpage/index.html
+++ b/startpage/index.html
@@ -31,6 +31,7 @@
                     <li class='title'>dev</li>
                     <li><a href='https://github.com/' target='_blank' rel='noopener noreferrer'>github</a></li>
                     <li><a href='https://stackoverflow.com/' target='_blank' rel='noopener noreferrer'>stackoverflow</a></li>
+                    <li><a href='https://godotengine.org/' target='_blank' rel='noopener noreferrer'>godot</a></li>
                     <li><a href='https://archlinux.org/' target='_blank' rel='noopener noreferrer'>arch homepage</a></li>
                     <li><a href='https://wiki.archlinux.org/' target='_blank' rel='noopener noreferrer'>arch wiki</a></li>
                 </div>
