Add financials section to startpage.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -28,6 +28,16 @@
 
             <div class='category'>
                 <div class='links'>
+                    <li class='title'>financial</li>
+                    <li><a href='https://bankofamerica.com' target='_blank' rel='noopener noreferrer'>bank of america</a></li>
+                    <li><a href='https://chase.com' target='_blank' rel='noopener noreferrer'>chase</a></li>
+                    <li><a href='https://schwab.com' target='_blank' rel='noopener noreferrer'>schwab</a></li>
+                    <li><a href='https://personal.vanguard.com' target='_blank' rel='noopener noreferrer'>vanguard</a></li>
+                </div>
+            </div>
+
+            <div class='category'>
+                <div class='links'>
                     <li class='title'>dev</li>
                     <li><a href='https://github.com/' target='_blank' rel='noopener noreferrer'>github</a></li>
                     <li><a href='https://stackoverflow.com/' target='_blank' rel='noopener noreferrer'>stackoverflow</a></li>
