Add Discover to startpage.

--- a/startpage/index.html
+++ b/startpage/index.html
@@ -33,6 +33,7 @@
                     <li><a href='https://chase.com' target='_blank' rel='noopener noreferrer'>chase</a></li>
                     <li><a href='https://schwab.com' target='_blank' rel='noopener noreferrer'>schwab</a></li>
                     <li><a href='https://personal.vanguard.com' target='_blank' rel='noopener noreferrer'>vanguard</a></li>
+                    <li><a href='https://discover.com' target='_blank' rel='noopener noreferrer'>discover</a></li>
                 </div>
             </div>
 
