--- a/startpage/index.html
+++ b/startpage/index.html
@@ -74,6 +74,7 @@
                     <li><a href='https://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
                     <li><a href='https://itch.io' target='_blank' rel='noopener noreferrer'>itch.io</a></li>
                     <li><a href='https://wikipedia.org' target='_blank' rel='noopener noreferrer'>wikipedia</a></li>
+                    <li><a href='https://search.marginalia.nu' target='_blank' rel='noopener noreferrer'>marginalia</a></li>
                 </div>
             </div>
         </div>
