--- a/startpage/index.html
+++ b/startpage/index.html
@@ -68,9 +68,16 @@
 
             <div class='category'>
                 <div class='links'>
-                    <li class='title'>misc</li>
+                    <li class='title'>local</li>
                     <li><a href='http://pi.hole' target='_blank' rel='noopener noreferrer'>pihole</a></li>
                     <li><a href='http://localhost:8384' target='_blank' rel='noopener noreferrer'>syncthing</a></li>
+                    <li><a href='http://mk4.local' target='_blank' rel='noopener noreferrer'>3d printer</a></li>
+                </div>
+            </div>
+
+            <div class='category'>
+                <div class='links'>
+                    <li class='title'>misc</li>
                     <li><a href='https://protondb.com' target='_blank' rel='noopener noreferrer'>protondb</a></li>
                     <li><a href='https://itch.io' target='_blank' rel='noopener noreferrer'>itch.io</a></li>
                     <li><a href='https://wikipedia.org' target='_blank' rel='noopener noreferrer'>wikipedia</a></li>
